Fixed Favicon1.png not showing. Created folders for media uses.

--- a/home.css
+++ b/home.css
@@ -2,7 +2,7 @@
   display: block;
   position: absolute;
   background-repeat: no-repeat;
-  background-image: url("cherry.gif");
+  background-image: url("Media/Images/cherry.gif");
   background-size: cover;
   height: 92%;
   width: 100%;
